# lazy_kanimal

./: Cargo.toml  README.md
src/: config_util.rs  file_util.rs  main.rs
