[package]
name = "easy-kanimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.75"
serde_yaml = "0.9.21"
schemars = "0.8.8"
walkdir = "2.3.3"
regex = "1.8.3"